k8s/vibank-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vibank-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vibank-front
  template:
    metadata:
      labels:
        app: vibank-front
    spec:
      containers:
      - name: vibank-front
        image: sockmal/vibank-front:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "30Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
