k8s/vibank-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vibank-front
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vibank-front
